# shad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  colors.c  controls.c  error.c  meson.build  screen.c  shad  shad.c  shad.h
copy/: Makefile  controls.c  error.c  screen.c  shad  shad.c  shad.h
libs/: libs.cmake
palette/: a.out  default-palette.json  palette.c
src/: button.c  button.h  canvas.c  canvas.h  choosen_color_panel.c  choosen_color_panel.h  color.c  color.h  color_picker_panel.c  color_picker_panel.h  compile_commands.json  input.c  input.h  instrument_panel.c  instrument_panel.h  label.c  label.h  main.c  main_screen_panel.c  main_screen_panel.h  menu.c  menu.h  ncpanel.c  ncpanel.h  palette.c  palette.h  palette_window.c  palette_window.h  panel_list.c  panel_list.h  screen.c  screen.h  selected_color_panel.c  selected_color_panel.h  shad.c  shad.h  shad_error.c  shad_error.h  src.cmake  state.c  (+5 more)
src/.cache/clangd/index/: button.c.DAB4829CAEA29D4A.idx  button.h.F374E7E31131D1DF.idx  canvas.c.2FDE028CC83D634F.idx  canvas.h.9EB3B6AF86A2C3FF.idx  choosen_color_panel.c.1D147BF3895D8E87.idx  choosen_color_panel.h.9B32E6AF722C45FA.idx  color_picker_panel.c.B41E1A1104916002.idx  color_picker_panel.h.DC890735491B4839.idx  input.c.22421A6B4499F3C2.idx  input.h.DDFE3596A54A6732.idx  instrument_panel.c.3F6A974D114A4095.idx  instrument_panel.h.0551432EEAED6181.idx  label.c.C329D6E26B9F7416.idx  label.h.71AC3EE5B42EBCE8.idx  main.c.3808EB53ED3CA595.idx  palette.c.6DCEF3B461B8821A.idx  palette.h.FB8F993E1AF0CC91.idx  palette_window.h.D2CCC5DCF2524FD2.idx  pallete.h.8CD4415320B232FE.idx  panel_list.h.D5D4EB101CE17272.idx  shad.c.CC35F879E51EB0AB.idx  shad.h.510FB74E61674EC3.idx  shad_error.c.895AE4EBC6F04F5B.idx  shad_error.h.0733DCDE69A0DC62.idx  util.c.C48CE03FB4188818.idx  util.h.87516BE6103EE2E5.idx
